--- a/Stock_Message_Bot_Project/spider_input/spider_input.csproj
+++ b/Stock_Message_Bot_Project/spider_input/spider_input.csproj
@@ -18,6 +18,9 @@
     <None Update="Stock.db">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Stocks.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="wget.exe">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
